--- a/client/src/assets/css/index.css
+++ b/client/src/assets/css/index.css
@@ -177,7 +177,7 @@ ul {
   font-size: 1.25rem;
   padding: 0.5rem 1.25rem;
 }
-.btn-ticket {
+.btn-api {
   font-size: 1.25rem;
   padding: 0.5rem 1.25rem;
 }
